feris de limatambo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
 
-    <title>FeriaRegionalChinchero</title>
+    <title>Expo Feria Regional Limatambo 2024 </title>
   </head>
   <body>
     <div id="root"></div>
